[gd_scene load_steps=2 format=3 uid="uid://bvpf1abpcdnar"]

[ext_resource type="Script" path="res://scenes/ui/settingsmenu.gd" id="1_kao2b"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_kao2b")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(640, 480)
layout_mode = 0
offset_right = 640.0
offset_bottom = 480.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 5
alignment = 1

[node name="MusicVolume" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Music"

[node name="MusicSlider" type="HSlider" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
max_value = 1.0
step = 0.05

[node name="SFXVolume" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Sounds"

[node name="SFXSlider" type="HSlider" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
max_value = 1.0
step = 0.05

[node name="CloseButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 300.0
offset_top = 300.0
offset_right = 345.0
offset_bottom = 331.0
grow_horizontal = 2
grow_vertical = 0
text = "Back"

[connection signal="value_changed" from="Panel/VBoxContainer/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="Panel/VBoxContainer/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
